* Make fuse.Function.bind() throw a TypeError if `fn` argument is not a function and refactor native bind branch. [jddalton]

* Add a cache flag argument to fuse.dom.Element.create() to allow devs to specify that the dom decorator is not cached. [jddalton]

* Add fuse.dom.Window decorator. [jddalton]

* Stop extending elements with the getFuseId() method and use `uniqueNumber` if available. [jddalton]

* Move fuse.dom.extendByTag() to fuse.dom.Element.extendByTag(). [jddalton]

* Split element.js into modification.js and create.js. [jddalton]

* Remove one closure around fuse.Array extensions. [jddalton]

* Add get() method to fuse.dom.NodeList.plugin and remove fuse.dom.RawList and fuse.rawQuery(), making fuse.query() act like fuse.rawQuery(). [jddalton]
  Note: Backwards compatibility warning.

* Ensure native fuse.String#trim works properly and add fuse.env.test('STRING_TRIM_INCOMPLETE'). [FuseJS LH #55] [jddalton, kangax]

* Micro-optimize fuse.Object.keys() and fuse.Object.values() by avoiding results.push(). [Garrett Smith]

* Remove fuse.Enumerable mixins from fuse.Hash. [FuseJS LH #28] [jddalton]

* Update DOM traversal API. [Joe Gornick, jddalton]
  Note: Backwards compatibility warning.
  - Renamed firstDescendant -> first
  - Added/changed API functionality
    up/down/next/previous/first/last():
      Returns parentNode/firstElementChild/nextElementSibling/previousElementSibling/lastElementChild
    up/down/next/previous/first/last(selectors):
      Returns relevant element element matched by specified selector
    up/down/next/previous/first/last(callback, thisArg):
      Returns first relevant element that callback returns true for
    up/down/next/previous/first/last(n):
      Returns an nth length fuse.dom.NodeList of relevant elements

* Make fuse.dom.Selector namespace lowercase and update selector engine adapters to support an optional `callback` argument. [jddalton]
